And corrected bullet point alignment for small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -189,7 +189,7 @@ footer
         content: "\1D121\00A0\00A0\00A0";
         font-family: "Bravura";
         font-size: 1rem;
-        vertical-align: text-top;
+        vertical-align: middle;
     }
 
     homepagenavigationitem
